--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>
-    Diffuso
+    Stratos
   </title>
 
   <!-- slider stylesheet -->
@@ -106,14 +106,14 @@
                   <div class="col-md-6">
                     <div class="detail-box">
                       <h1>
-                        Design
+                        Stratos
                         <br />
-                        Agency
+                        Web Development
                       </h1>
                       <p>
                         There are many variations of passages of Lorem Ipsum available, but the
                       </p>
-                      <a href="">
+                      <a href="contact.html">
                         Contact Us
                       </a>
                     </div>
@@ -132,9 +132,9 @@
                   <div class="col-md-6">
                     <div class="detail-box">
                       <h1>
-                        Design
+                        Stratos
                         <br />
-                        Agency
+                        Web Development
                       </h1>
                       <p>
                         There are many variations of passages of Lorem Ipsum available, but the
@@ -485,7 +485,7 @@
         <div class="detail-box">
           <div class="heading_container">
             <h2>
-              About <span>Design</span> Agency
+              About <span>Stratos</span> Web Development
             </h2>
           </div>
           <p>
@@ -637,15 +637,15 @@
             <div class="info_link-box">
               <a href="">
                 <img src="images/location.png" alt="">
-                <span> Gb road 123 london Uk </span>
+                <span> 555 Main Street </span>
               </a>
               <a href="">
                 <img src="images/call.png" alt="">
-                <span>+01 12345678901</span>
+                <span>555-555-1234</span>
               </a>
               <a href="">
                 <img src="images/mail.png" alt="">
-                <span> demo@gmail.com</span>
+                <span> stratos@stratos.com</span>
               </a>
             </div>
           </div>
@@ -656,8 +656,7 @@
     <section class=" footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayYear"></span> All Rights Reserved By Stratos
         </p>
       </div>
     </section>
