--- a/views/service.html
+++ b/views/service.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>
-    Diffuso
+    Stratos
   </title>
 
   <!-- slider stylesheet -->
@@ -204,15 +204,15 @@
             <div class="info_link-box">
               <a href="">
                 <img src="images/location.png" alt="">
-                <span> Gb road 123 london Uk </span>
+                <span> 555 Main Street </span>
               </a>
               <a href="">
                 <img src="images/call.png" alt="">
-                <span>+01 12345678901</span>
+                <span>555-555-1234</span>
               </a>
               <a href="">
                 <img src="images/mail.png" alt="">
-                <span> demo@gmail.com</span>
+                <span> stratos@stratos.com</span>
               </a>
             </div>
           </div>
@@ -224,7 +224,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          Stratos Web Development
         </p>
       </div>
     </section>
