--- a/views/index.html
+++ b/views/index.html
@@ -158,9 +158,9 @@
                   <div class="col-md-6">
                     <div class="detail-box">
                       <h1>
-                        Design
+                        Stratos
                         <br />
-                        Agency
+                        Web Development
                       </h1>
                       <p>
                         There are many variations of passages of Lorem Ipsum available, but the
