changes to index.html

--- a/views/index.html
+++ b/views/index.html
@@ -111,7 +111,7 @@
                         Web Development
                       </h1>
                       <p>
-                        There are many variations of passages of Lorem Ipsum available, but the
+                        Stratos Web Design helps businesses build an online presence through innovative website design and development solutions.
                       </p>
                       <a href="contact.html">
                         Contact Us
@@ -137,7 +137,7 @@
                         Web Development
                       </h1>
                       <p>
-                        There are many variations of passages of Lorem Ipsum available, but the
+                        Stratos Web Design helps businesses build an online presence through innovative website design and development solutions.
                       </p>
                       <a href="">
                         Contact Us
@@ -163,7 +163,7 @@
                         Web Development
                       </h1>
                       <p>
-                        There are many variations of passages of Lorem Ipsum available, but the
+                        Stratos Web Design helps businesses build an online presence through innovative website design and development solutions.
                       </p>
                       <a href="">
                         Contact Us
@@ -200,7 +200,7 @@
           Ser<span>vi</span>ces
         </h2>
         <p>
-          adipiscingelit,sed do eiusmod tempor incididunt ut labore et dolore magn
+          Stratos Web Design provides website design and development services to help businesses establish an effective online presence. They offer innovative solutions to enhance user experience and help their clients achieve their online goals.
         </p>
       </div>
       <div class="row">
@@ -225,25 +225,25 @@
             <div class="detail-box active" id="img1-tab" data-toggle="tab" href="#img1" role="tab" aria-selected="true">
               <h4>
                 Website <br />
-                design
+                Design
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img2" role="tab" aria-selected="false">
               <h4>
                 Logo <br />
-                design
+                Design
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img3" role="tab" aria-selected="false">
               <h4>
-                brochure <br />
-                design
+                Brochure <br />
+                Design
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img4" role="tab" aria-selected="false">
               <h4>
-                visiting card <br />
-                design
+                Visiting Card <br />
+                Design
               </h4>
             </div>
           </div>
