changes to index.html

--- a/views/index.html
+++ b/views/index.html
@@ -200,7 +200,7 @@
           Ser<span>vi</span>ces
         </h2>
         <p>
-          Stratos Web Design provides website design and development services to help businesses establish an effective online presence. They offer innovative solutions to enhance user experience and help their clients achieve their online goals.
+          Stratos Web Design provides website design and development services to help businesses establish an effective online presence. We offer innovative solutions to enhance user experience and help their clients achieve their online goals.
         </p>
       </div>
       <div class="row">
@@ -267,7 +267,7 @@
         Por<span>tf</span>olio
       </h2>
       <p>
-        adipiscingelit,sed do eiusmod tempor incididunt ut labore et dolore magn
+        At Stratos, our portfolio showcases our innovative approach to website design and development, highlighting our ability to deliver high-quality solutions that drive results for businesses of all sizes.
       </p>
     </div>
     <div class="portfolio_container layout_padding">
