changes to index.html

--- a/views/index.html
+++ b/views/index.html
@@ -572,7 +572,7 @@
         </div>
         <div class="detail-box">
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem
+            "Stratos Web Development is an outstanding partner for any web development project. Their team is responsive, knowledgeable, and easy to work with. They brought a fresh perspective to our website redesign and delivered a result that surpassed our expectations. I would highly recommend Stratos Web Development to any business looking for a reliable, innovative, and results-driven web development partner."
           </p>
           <img src="images/quote.png" alt="">
         </div>
@@ -610,7 +610,7 @@
               ABOUT US
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Stratos Web Development is a leading web development company that offers innovative solutions to help businesses establish a strong online presence. The company is committed to delivering exceptional results and providing personalized service that exceeds client expectations.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
