changes to index.html

--- a/views/index.html
+++ b/views/index.html
@@ -618,8 +618,7 @@
               Instagram
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipi
-              scing elit, sed doLorem ipsum dolor sit
+              Check out Stratos Web Development on Instagram for the latest updates on our web development projects and to see how we help businesses establish a strong online presence.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
