changes to index.html

--- a/views/index.html
+++ b/views/index.html
@@ -626,7 +626,7 @@
               NEED HELP
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              If you need help improving your website's speed, mobile-friendliness, navigation, messaging, or SEO, we're here to help! Our team of experts can provide tailored solutions to help your website stand out and achieve your online goals. Contact us today to learn more about our website improvement services.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
