--- a/views/about.html
+++ b/views/about.html
@@ -93,7 +93,7 @@
             </h2>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            Stratos Web Development is a leading web development company, committed to helping businesses of all sizes establish a strong online presence. With a team of talented developers, Stratos Web Development offers innovative solutions that are tailored to meet the unique needs and objectives of each client. Whether it's creating a website from scratch, refreshing an existing design, or developing an e-commerce platform, Stratos Web Development has the skills and expertise to deliver exceptional results. With a focus on providing personalized service and attention to detail, Stratos Web Development takes pride in ensuring that every project is delivered on time, on budget, and to the highest standards of quality.
           </p>
           <a href="">
             Read More
