--- a/views/about.html
+++ b/views/about.html
@@ -134,7 +134,7 @@
               ABOUT US
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Stratos Web Development is a leading web development company that offers innovative solutions to help businesses establish a strong online presence. The company is committed to delivering exceptional results and providing personalized service that exceeds client expectations.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -142,8 +142,7 @@
               Instagram
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipi
-              scing elit, sed doLorem ipsum dolor sit
+              Check out Stratos Web Development on Instagram for the latest updates on our web development projects and to see how we help businesses establish a strong online presence.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -151,7 +150,7 @@
               NEED HELP
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              If you need help improving your website's speed, mobile-friendliness, navigation, messaging, or SEO, we're here to help! Our team of experts can provide tailored solutions to help your website stand out and achieve your online goals. Contact us today to learn more about our website improvement services.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
