changes to service.html

--- a/views/service.html
+++ b/views/service.html
@@ -132,7 +132,7 @@
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img4" role="tab" aria-selected="false">
               <h4>
-                Visiting Card <br />
+                Business Card <br />
                 Design
               </h4>
             </div>
