--- a/views/service.html
+++ b/views/service.html
@@ -90,7 +90,7 @@
           Ser<span>vi</span>ces
         </h2>
         <p>
-          If you need help improving your website's speed, mobile-friendliness, navigation, messaging, or SEO, we're here to help! Our team of experts can provide tailored solutions to help your website stand out and achieve your online goals. Contact us today to learn more about our website improvement services.
+          Stratos Web Development provides website design and development services to help businesses establish an effective online presence. We offer innovative solutions to enhance user experience and help their clients achieve their online goals.
         </p>
       </div>
       <div class="row">
