--- a/views/index.html
+++ b/views/index.html
@@ -200,7 +200,7 @@
           Ser<span>vi</span>ces
         </h2>
         <p>
-          Stratos Web Design provides website design and development services to help businesses establish an effective online presence. We offer innovative solutions to enhance user experience and help their clients achieve their online goals.
+          Stratos Web Development provides website design and development services to help businesses establish an effective online presence. We offer innovative solutions to enhance user experience and help their clients achieve their online goals.
         </p>
       </div>
       <div class="row">
@@ -242,7 +242,7 @@
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img4" role="tab" aria-selected="false">
               <h4>
-                Visiting Card <br />
+                Business Card <br />
                 Design
               </h4>
             </div>
