--- a/views/contact.html
+++ b/views/contact.html
@@ -152,7 +152,7 @@
         </div>
         <div class="detail-box">
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem
+            "Stratos Web Development is an outstanding partner for any web development project. Their team is responsive, knowledgeable, and easy to work with. They brought a fresh perspective to our website redesign and delivered a result that surpassed our expectations. I would highly recommend Stratos Web Development to any business looking for a reliable, innovative, and results-driven web development partner."
           </p>
           <img src="images/quote.png" alt="">
         </div>
@@ -190,7 +190,7 @@
               ABOUT US
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Stratos Web Development is a leading web development company that offers innovative solutions to help businesses establish a strong online presence. The company is committed to delivering exceptional results and providing personalized service that exceeds client expectations.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -198,8 +198,7 @@
               Instagram
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipi
-              scing elit, sed doLorem ipsum dolor sit
+              Check out Stratos Web Development on Instagram for the latest updates on our web development projects and to see how we help businesses establish a strong online presence.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -207,7 +206,7 @@
               NEED HELP
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              If you need help improving your website's speed, mobile-friendliness, navigation, messaging, or SEO, we're here to help! Our team of experts can provide tailored solutions to help your website stand out and achieve your online goals. Contact us today to learn more about our website improvement services.
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
