--- a/views/contact.html
+++ b/views/contact.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>
-    Stratos
+    Stratos Web Development
   </title>
 
   <!-- slider stylesheet -->
@@ -105,10 +105,10 @@
         <div class="col-md-5 col-lg-4 px-0">
           <form action="">
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Name" required />
             </div>
             <div>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="Email" required />
             </div>
             <div>
               <input type="text" placeholder="Phone" />
