--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>
-    Stratos
+    Stratos Web Development
   </title>
 
   <!-- slider stylesheet -->
