--- a/views/contact.html
+++ b/views/contact.html
@@ -8,9 +8,9 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="stratos, web development, william a. ferguson" />
+  <meta name="description" content="Stratos Web Development Business Website" />
+  <meta name="author" content="William A. Ferguson" />
 
   <title>
     Stratos Web Development
