--- a/views/contact.html
+++ b/views/contact.html
@@ -98,7 +98,7 @@
         <div class="col-lg-8 col-md-7 px-0">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1535.0616125025397!2d-118.27147493044417!3d34.051128413150614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7a4a410facf%3A0x7dac4ce83ab995cc!2s734%20Valencia%20St%2C%20Los%20Angeles%2C%20CA%2090017!5e0!3m2!1sen!2sus!4v1682640735336!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=734+Valencia+Street+Los+Angeles+CA " width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
             </div>
           </div>
         </div>
