--- a/views/contact.html
+++ b/views/contact.html
@@ -98,7 +98,7 @@
         <div class="col-lg-8 col-md-7 px-0">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d900.5600502261983!2d-121.61560675052615!3d39.13965428781999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809b5345bf4bb1ef%3A0xd20b98a7d3963651!2s755%20Shasta%20St%2C%20Yuba%20City%2C%20CA%2095991!5e1!3m2!1sen!2sus!4v1682641676170!5m2!1sen!2sus" width=“600" height=“300”  frameborder=“0” style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
             </div>
           </div>
         </div>
