--- a/views/index.html
+++ b/views/index.html
@@ -636,7 +636,7 @@
             <div class="info_link-box">
               <a href="">
                 <img src="images/location.png" alt="">
-                <span> 555 Main Street </span>
+                <span> 755 Shasta Street, Yuba City, CA 95991 </span>
               </a>
               <a href="">
                 <img src="images/call.png" alt="">
