added portfolio projects

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -97,11 +97,9 @@
         <div class="img-box b-1">
           <img src="images/p1.png" alt="">
           <div class="btn-box">
-            <a href="" class="btn-1">
-
+            <a href="https://wilsb8.github.io/AirportHobo/" class="btn-1">
             </a>
             <a href="https://wilsb8.github.io/AirportHobo/" class="btn-2">
-
             </a>
           </div>
         </div>
@@ -109,11 +107,9 @@
           <img src="images/p2.png" alt="">
           <div class="btn-box">
             <a href="https://fergusonwilliam-fs.github.io/WDD348/" class="btn-1">
-
             </a>
-            <a href="" class="btn-2">
-
-            </a>
+            <a href="https://fergusonwilliam-fs.github.io/WDD348/" class="btn-2">
+            </a> 
           </div>
         </div>
       </div>
