added portfolio projects

--- a/views/index.html
+++ b/views/index.html
@@ -273,48 +273,20 @@
     <div class="portfolio_container layout_padding">
       <div class="box-1">
         <div class="img-box b-1">
-          <img src="images/p1.jpg" alt="">
+          <img src="images/p1.png" alt="">
           <div class="btn-box">
-            <a href="" class="btn-1">
-
+            <a href="https://wilsb8.github.io/AirportHobo/" class="btn-1">
             </a>
-            <a href="" class="btn-2">
-
+            <a href="https://wilsb8.github.io/AirportHobo/" class="btn-2">
             </a>
           </div>
         </div>
         <div class="img-box b-2">
-          <img src="images/p2.jpg" alt="">
+          <img src="images/p2.png" alt="">
           <div class="btn-box">
-            <a href="" class="btn-1">
-
+            <a href="https://fergusonwilliam-fs.github.io/WDD348/" class="btn-1">
             </a>
-            <a href="" class="btn-2">
-
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="box-2">
-        <div class="img-box b-3">
-          <img src="images/p3.jpg" alt="">
-          <div class="btn-box">
-            <a href="" class="btn-1">
-
-            </a>
-            <a href="" class="btn-2">
-
-            </a>
-          </div>
-        </div>
-        <div class="img-box b-4">
-          <img src="images/p4.jpg" alt="">
-          <div class="btn-box">
-            <a href="" class="btn-1">
-
-            </a>
-            <a href="" class="btn-2">
-
+            <a href="https://fergusonwilliam-fs.github.io/WDD348/" class="btn-2">
             </a>
           </div>
         </div>
